[gd_scene load_steps=10 format=3 uid="uid://bu5yqconeo332"]

[ext_resource type="Script" path="res://scripts/start_menu.gd" id="1_f08o0"]
[ext_resource type="Texture2D" uid="uid://cl0tj3bbtvkie" path="res://sprites/button sprites/menu buttons/NORMAL Start.png" id="2_ik0tj"]
[ext_resource type="Texture2D" uid="uid://cclvnpwpp4ygo" path="res://sprites/button sprites/menu buttons/PRESSED Start.png" id="3_cb6bt"]
[ext_resource type="Texture2D" uid="uid://cud01rpvy57fy" path="res://sprites/button sprites/menu buttons/NORMAL Settings.png" id="4_j3ev0"]
[ext_resource type="Texture2D" uid="uid://dxjehcyt5ojh" path="res://sprites/button sprites/menu buttons/PRESSED Settings.png" id="5_uqp4y"]
[ext_resource type="Texture2D" uid="uid://brq03xas0sqlf" path="res://sprites/button sprites/menu buttons/NORMAL Credits.png" id="6_cnv0s"]
[ext_resource type="Texture2D" uid="uid://dvagjfflcter3" path="res://sprites/button sprites/menu buttons/PRESSED Credits.png" id="7_pisbi"]
[ext_resource type="Texture2D" uid="uid://7ic8myp707np" path="res://sprites/button sprites/menu buttons/NORMAL Quit.png" id="8_v04vs"]
[ext_resource type="Texture2D" uid="uid://b6jcnojuw13h8" path="res://sprites/button sprites/menu buttons/PRESSED Quit.png" id="9_b7ksk"]

[node name="Start_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f08o0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.188235, 0.188235, 1)

[node name="CenterContainer" type="CenterContainer" parent="Background"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer"]
layout_mode = 2

[node name="Start button" type="TextureButton" parent="Background/CenterContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_ik0tj")
texture_pressed = ExtResource("3_cb6bt")

[node name="Settings button" type="TextureButton" parent="Background/CenterContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_j3ev0")
texture_pressed = ExtResource("5_uqp4y")

[node name="Credits button" type="TextureButton" parent="Background/CenterContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_cnv0s")
texture_pressed = ExtResource("7_pisbi")

[node name="Quit button" type="TextureButton" parent="Background/CenterContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_v04vs")
texture_pressed = ExtResource("9_b7ksk")

[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/Start button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/Settings button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/Quit button" to="." method="_on_quit_button_pressed"]
